v5.7.0
- Removed - align{left/center/right/none} styles (as they were added in core)
- Updated - core/latest-posts and core/latest-comments template filter now takes a string as 1st argument (without parse_blocks)
- Updated - single.html template comments markup: remove group and rename core/comments-query-loop to core/comments
- Fixed - A bug with spacing margin/padding generation when all paddings are equal but not on all dirrections
- Fixed - core/post-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
- Fixed - core/comment-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
- Added - core/post-template $args as 3rd parameter to template filter and new filter for Query Template - wecodeart/filter/gutenberg/latest-posts/query
- Added - core/comment-template support for threaded comments

v5.6.9
- Removed - core/pullquote redundant is-style-solid CSS rules and extra attributes processor
- Updated - Offcanvas menu label support
- Updated - core/comment-template: remove custom title as it was added as a separate block in WP Core / comment-form top margin removed
- Updated - Single template to use core/comments-title block
- Updated - Single template markup: remove unnecessary group wrapper and use col- classes for width
- Updated - CSS for core/comment-template and core/comment-title blocks
- Updated - Romanian local translation
- Updated - Gutenberg Styles extension UI - moved Popover into label
- Updated - theme.json custom spacer to spacing (to follow WP naming standard) for custom number scaled spacing utilities
- Fixed - core/navigation justification and alignment
- Fixed - core/search styles and button markup after Gutenberg updates
- Fixed - core/separator inline CSS generation for custom color
- Fixed - core/cover styles updated to 6.1
- Fixed - page-sidebar columns vertical alignment
- Added - Pillar Content template/pattern with table of contents