@@ -1,1 +1,1 @@
-.wp-block-social-links{display:flex;flex-wrap:wrap;align-items:center;padding-left:0;padding-right:0;gap:var(--wp--style--block-gap,1em);font-size:1.25rem}.wp-block-social-links.aligncenter{display:flex;justify-content:center}.wp-block-social-links.is-style-pill-shape .wp-social-link{width:auto}.wp-block-social-links.is-style-pill-shape .wp-social-link a{padding-left:calc((2.5/3) * 1em);padding-right:calc((2.5/3) * 1em)}.wp-block-social-links.is-style-square-shape .wp-social-link a{border-radius:0}.wp-block-social-links.is-style-logos-only .wp-social-link a{background:none;padding:0}.wp-social-link{display:block;background-color:transparent}.wp-social-link a{display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;border-radius:9999px;transition:all 0.1s ease;padding:.35em;line-height:0;text-decoration:none;border:none;box-shadow:none}.wp-social-link svg{width:1em;height:1em}.navbar .wp-block-social-links{margin-top:0;margin-bottom:0}
+.wp-block-social-links{display:flex;flex-wrap:wrap;align-items:center;padding-left:0;padding-right:0;gap:var(--wp--style--block-gap,1em);font-size:1.25rem}.wp-block-social-links.aligncenter{display:flex;justify-content:center}.wp-block-social-links.is-style-pill-shape .wp-social-link{width:auto}.wp-block-social-links.is-style-pill-shape .wp-social-link a{padding-left:calc((2.5/3) * 1em);padding-right:calc((2.5/3) * 1em)}.wp-block-social-links.is-style-square-shape .wp-social-link a{border-radius:0}.wp-block-social-links.is-style-logos-only .wp-social-link a{background:none;padding:0}.wp-social-link{display:block;background-color:transparent}.wp-social-link a{display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;border-radius:9999px;transition:all 0.1s ease;padding:.35em;line-height:0;text-decoration:none;border:none;box-shadow:none}.wp-social-link svg{width:1em;height:1em}
