@@ -1,7 +1,10 @@
 v5.7.0
 - Removed - align{left/center/right/none} styles (as they were added in core)
+- Updated - core/social-links styles regarding .nav-bar margin
 - Updated - core/latest-posts and core/latest-comments template filter now takes a string as 1st argument (without parse_blocks)
 - Updated - single.html template comments markup: remove group and rename core/comments-query-loop to core/comments
+- Updated - core/navigation disable view_script_handles (we use Bootstraps's offcanvas and Navigation js)
+- Updated - core/latest-comments remove background from comment content (works better on dark style)
 - Fixed - A bug with spacing margin/padding generation when all paddings are equal but not on all dirrections
 - Fixed - core/post-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
 - Fixed - core/comment-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
